@@ -110,6 +110,30 @@
             <!--big-article class is article template-->
             <script>
               changeBox(
+                "March",
+                "15",
+                "2023",
+                "Made background hover color easier to look at"
+              );
+              changeBox(
+                "March",
+                "9",
+                "2023",
+                "Fixed consistency of new hover color across all links on the site-Made hover color of articles brighter instead of darker to help text stand out more-Brightened background color of articles-Increased size of article text"
+              );
+              changeBox(
+                "March",
+                "8",
+                "2023",
+                "Changed hover color of links to green instead of purple to improve contrast"
+              );
+              changeBox(
+                "February",
+                "27",
+                "2023",
+                "Improved contrast of links from background"
+              );
+              changeBox(
                 "February",
                 "16",
                 "2023",
