@@ -76,7 +76,7 @@
 }
 .big-article:hover,
 .home-article:hover {
-  background-color: rgb(184, 190, 250);
+  background-color: rgb(173, 207, 245);
 }
 
 .big-text,
